// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IT Solutions Add Subtasks > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/"
        >
          <span>
            Model Plan task list
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions"
        >
          <span>
            IT solutions tracker
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/786f6717-f718-4657-8df9-58ec9bca5c1c/solution-details"
        >
          <span>
            Solution details
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current"
      >
        <span>
          Add subtask
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="grid-row grid-gap"
    data-testid="grid"
  >
    <div
      class="tablet:grid-col-9"
      data-testid="grid"
    >
      <h1
        aria-live="polite"
        class="mint-h1 margin-top-4 margin-bottom-2"
        tabindex="-1"
      >
        Add subtask
      </h1>
      <p
        class="margin-top-0 margin-bottom-1 font-body-lg"
        data-testid="model-plan-name"
      >
        for 
      </p>
      <p
        class="line-height-body-4"
      >
        Add important subtasks to stay organized throughout the implementation process.
      </p>
      <div
        class="tablet:grid-col-12 desktop:grid-col-8"
        data-testid="grid"
      >
        <div
          class="grid-container padding-3 bg-base-lightest maxw-none"
          data-testid="gridContainer"
        >
          <div
            class="grid-row"
            data-testid="grid"
          >
            <div
              class="desktop:grid-col-12"
              data-testid="grid"
            >
              <p
                class="text-bold margin-y-1"
              >
                Operational need
              </p>
              <p
                class="margin-top-0 font-body-sm"
              >
                Obtain an application support contractor
              </p>
            </div>
            <div
              class="desktop:grid-col-12"
              data-testid="grid"
            >
              <button
                class="usa-button usa-button--unstyled display-flex flex-align-center text-ls-1 deep-underline margin-bottom-1 margin-top-1"
                data-testid="toggle-need-answer"
                type="button"
              >
                <svg
                  class="usa-icon margin-right-05 needs-question__rotate"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  />
                </svg>
                Why is this a part of my operational needs?
              </button>
              <div>
                <p
                  class="text-bold margin-top-4"
                >
                  Solution
                </p>
                <ul
                  class="usa-card-group flex-column flex-no-wrap"
                  data-testid="CardGroup"
                >
                  <li
                    class="usa-card solution-card"
                    data-testid="Card"
                  >
                    <div
                      class="usa-card__container"
                    >
                      <div
                        class="padding-3"
                      >
                        <h3
                          class="margin-top-0 solutions-checkbox__header margin-bottom-2"
                        >
                          My custom solution
                        </h3>
                        <div
                          class="tablet:grid-col-6"
                          data-testid="grid"
                        >
                          <p
                            class="text-bold margin-bottom-0"
                          >
                            Point of contact
                          </p>
                          <p
                            class="margin-y-0"
                          >
                            John Doe
                          </p>
                          <a
                            aria-label="Send an email"
                            class="usa-link line-height-body-5 display-flex flex-align-center"
                            href="mailto:j.doe@oddball.io"
                            target="_blank"
                          >
                            <div>
                              j.doe@oddball.io
                            </div>
                            <svg
                              class="usa-icon margin-left-05 text-tbottom"
                              focusable="false"
                              height="1em"
                              role="img"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"
                              />
                            </svg>
                          </a>
                        </div>
                        <div
                          class="mint-divider margin-top-2"
                        />
                        <div
                          class="display-flex margin-top-2"
                          data-testid="custom-solution-card"
                        >
                          <a
                            class="usa-link margin-right-2 display-flex flex-align-center"
                            href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/add-custom-solution/786f6717-f718-4657-8df9-58ec9bca5c1c?selectedSolution=OTHER_NEW_PROCESS"
                          >
                            Update these details
                            <svg
                              class="usa-icon margin-left-1"
                              focusable="false"
                              height="1em"
                              role="img"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                              />
                            </svg>
                          </a>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <form
          action="#"
          class="margin-top-6"
          data-testid="add-subtask-form"
        >
          <fieldset
            class="usa-fieldset"
            data-testid="fieldset"
          >
            <div
              class=""
              data-testid="add-subtask--0"
            >
              <div
                class="usa-form-group margin-top-4"
                data-scroll="name"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].name"
                >
                  Subtask name
                  <span
                    aria-label="(Field required)"
                    class="text-red margin-x-05"
                  >
                    *
                  </span>
                </label>
                <input
                  class="usa-input"
                  data-testid="textInput"
                  id="subtask-name--0"
                  maxlength="50"
                  name="subtasks[0].name"
                  value=""
                />
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--0--TODO"
                    name="subtasks[0].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--IN_PROGRESS"
                    name="subtasks[0].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--DONE"
                    name="subtasks[0].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--DONE"
                  >
                    Done
                  </label>
                </div>
              </div>
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--outline"
                data-testid="button"
                id="add-another-subtask"
                type="button"
              >
                Add another subtask
              </button>
            </div>
          </fieldset>
          <div
            class="margin-top-6 margin-bottom-3"
          >
            <button
              class="usa-button"
              data-testid="button"
              disabled=""
              id="submit-subtasks"
              type="submit"
            >
              Add subtask
            </button>
          </div>
          <button
            class="usa-button usa-button usa-button--unstyled display-flex flex-align-center margin-bottom-6"
            data-testid="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t add subtask and return to solution details
          </button>
        </form>
      </div>
    </div>
    <div
      class="desktop:grid-col-3 padding-x-1"
      data-testid="grid"
    >
      <div
        class="border-top-05 border-primary-lighter padding-top-2 margin-top-4"
      >
        <div
          class="padding-2 bg-primary-lighter"
        >
          <p
            class="text-bold margin-top-0"
          >
            Don’t know what to do next?
          </p>
          <div
            class="display-flex"
            data-testid="ask-a-question"
          >
            <svg
              class="usa-icon text-primary margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"
              />
            </svg>
            <button
              class="usa-button usa-button--unstyled"
              data-testid="ask-a-question-button"
              type="button"
            >
              Start a discussion
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IT Solutions Manage Subtasks > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/"
        >
          <span>
            Model Plan task list
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions"
        >
          <span>
            IT solutions tracker
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/786f6717-f718-4657-8df9-58ec9bca5c1c/solution-details"
        >
          <span>
            Solution details
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current"
      >
        <span>
          Manage subtasks
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="grid-row grid-gap"
    data-testid="grid"
  >
    <div
      class="tablet:grid-col-9"
      data-testid="grid"
    >
      <h1
        aria-live="polite"
        class="mint-h1 margin-top-4 margin-bottom-2"
        tabindex="-1"
      >
        Manage subtasks
      </h1>
      <p
        class="margin-top-0 margin-bottom-1 font-body-lg"
        data-testid="model-plan-name"
      >
        for 
      </p>
      <p
        class="line-height-body-4"
      >
        Track the status of your subtasks throughout the implementation process to stay organized.
      </p>
      <div
        class="tablet:grid-col-12 desktop:grid-col-8"
        data-testid="grid"
      >
        <div
          class="grid-container padding-3 bg-base-lightest maxw-none"
          data-testid="gridContainer"
        >
          <div
            class="grid-row"
            data-testid="grid"
          >
            <div
              class="desktop:grid-col-12"
              data-testid="grid"
            >
              <p
                class="text-bold margin-y-1"
              >
                Operational need
              </p>
              <p
                class="margin-top-0 font-body-sm"
              >
                Obtain an application support contractor
              </p>
            </div>
            <div
              class="desktop:grid-col-12"
              data-testid="grid"
            >
              <button
                class="usa-button usa-button--unstyled display-flex flex-align-center text-ls-1 deep-underline margin-bottom-1 margin-top-1"
                data-testid="toggle-need-answer"
                type="button"
              >
                <svg
                  class="usa-icon margin-right-05 needs-question__rotate"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  />
                </svg>
                Why is this a part of my operational needs?
              </button>
              <div>
                <p
                  class="text-bold margin-top-4"
                >
                  Solution
                </p>
                <ul
                  class="usa-card-group flex-column flex-no-wrap"
                  data-testid="CardGroup"
                >
                  <li
                    class="usa-card solution-card"
                    data-testid="Card"
                  >
                    <div
                      class="usa-card__container"
                    >
                      <div
                        class="padding-3"
                      >
                        <h3
                          class="margin-top-0 solutions-checkbox__header margin-bottom-2"
                        >
                          My custom solution
                        </h3>
                        <div
                          class="tablet:grid-col-6"
                          data-testid="grid"
                        >
                          <p
                            class="text-bold margin-bottom-0"
                          >
                            Point of contact
                          </p>
                          <p
                            class="margin-y-0"
                          >
                            John Doe
                          </p>
                          <a
                            aria-label="Send an email"
                            class="usa-link line-height-body-5 display-flex flex-align-center"
                            href="mailto:j.doe@oddball.io"
                            target="_blank"
                          >
                            <div>
                              j.doe@oddball.io
                            </div>
                            <svg
                              class="usa-icon margin-left-05 text-tbottom"
                              focusable="false"
                              height="1em"
                              role="img"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"
                              />
                            </svg>
                          </a>
                        </div>
                        <div
                          class="mint-divider margin-top-2"
                        />
                        <div
                          class="display-flex margin-top-2"
                          data-testid="custom-solution-card"
                        >
                          <a
                            class="usa-link margin-right-2 display-flex flex-align-center"
                            href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/add-custom-solution/786f6717-f718-4657-8df9-58ec9bca5c1c?selectedSolution=OTHER_NEW_PROCESS"
                          >
                            Update these details
                            <svg
                              class="usa-icon margin-left-1"
                              focusable="false"
                              height="1em"
                              role="img"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                              />
                            </svg>
                          </a>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <form
          action="#"
          class="margin-top-6"
          data-testid="manage-subtask-form"
        >
          <fieldset
            class="usa-fieldset"
            data-testid="fieldset"
          >
            <div
              class="border-bottom border-base-light"
              data-testid="manage-subtasks--0"
            >
              <div
                class="margin-top-4"
              >
                <p
                  class="usa-label margin-0"
                >
                  Subtask name
                </p>
                <p
                  class="margin-0"
                >
                  First Subtask
                </p>
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--0--TODO"
                    name="subtasks[0].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--IN_PROGRESS"
                    name="subtasks[0].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--DONE"
                    name="subtasks[0].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--DONE"
                  >
                    Done
                  </label>
                </div>
                <button
                  class="usa-button usa-button usa-button--unstyled line-height-body-5 text-red margin-y-3"
                  data-testid="button"
                  type="button"
                >
                  Remove this subtask
                </button>
              </div>
            </div>
            <div
              class="border-bottom border-base-light"
              data-testid="manage-subtasks--1"
            >
              <div
                class="margin-top-4"
              >
                <p
                  class="usa-label margin-0"
                >
                  Subtask name
                </p>
                <p
                  class="margin-0"
                >
                  Second Subtask
                </p>
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[1].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--1--TODO"
                    name="subtasks[1].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--1--IN_PROGRESS"
                    name="subtasks[1].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--1--DONE"
                    name="subtasks[1].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--DONE"
                  >
                    Done
                  </label>
                </div>
                <button
                  class="usa-button usa-button usa-button--unstyled line-height-body-5 text-red margin-y-3"
                  data-testid="button"
                  type="button"
                >
                  Remove this subtask
                </button>
              </div>
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--outline"
                data-testid="button"
                id="add-another-subtask"
                type="button"
              >
                Add another subtask
              </button>
            </div>
          </fieldset>
          <div
            class="margin-top-6 margin-bottom-3"
          >
            <button
              class="usa-button"
              data-testid="button"
              id="submit-subtasks"
              type="submit"
            >
              Update subtasks
            </button>
          </div>
          <button
            class="usa-button usa-button usa-button--unstyled display-flex flex-align-center margin-bottom-6"
            data-testid="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t add subtask and return to solution details
          </button>
        </form>
      </div>
    </div>
    <div
      class="desktop:grid-col-3 padding-x-1"
      data-testid="grid"
    >
      <div
        class="border-top-05 border-primary-lighter padding-top-2 margin-top-4"
      >
        <div
          class="padding-2 bg-primary-lighter"
        >
          <p
            class="text-bold margin-top-0"
          >
            Don’t know what to do next?
          </p>
          <div
            class="display-flex"
            data-testid="ask-a-question"
          >
            <svg
              class="usa-icon text-primary margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"
              />
            </svg>
            <button
              class="usa-button usa-button--unstyled"
              data-testid="ask-a-question-button"
              type="button"
            >
              Start a discussion
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
